--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./css/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
   <title>Caio Edimar | Portfólio</title>
 </head>
@@ -14,12 +17,12 @@
 <body>
   <header>
     <nav>
-      <a class="menu" href="#">Caio Edimar Santos Silva</a>
-      <a class="menu" href="#">Inicio</a>
-      <a class="menu" href="#">Conhecimentos</a>
-      <a class="menu" href="#">Portifolio</a>
-      <a class="menu" href="#">Contato</a>
-      <a class="menu" href="#">Tema</a>
+      <a class="menu" href="#"><img src="imagens/logos/logo com texto.png" alt=""></a>
+      <a class="menu" href="#">INICIO</a>
+      <a class="menu" href="#">CONHECIMENTO</a>
+      <a class="menu" href="#">PROJETOS</a>
+      <a class="menu" href="#">CONTATO</a>
+      <a class="menu" href="#">TEMA</a>
 
     </nav>
   </header>
