--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
 <body>
   <header>
     <nav>
-      <a class="menu" href="#"><img src="imagens/logos/logo com texto.png" alt=""></a>
-      <a class="menu" href="#">INICIO</a>
-      <a class="menu" href="#">CONHECIMENTO</a>
-      <a class="menu" href="#">PROJETOS</a>
-      <a class="menu" href="#">CONTATO</a>
-      <a class="menu" href="#">TEMA</a>
-
+      <a class="menu" href="#"><img src="imagens/logos/logo com texto.png"></a>
+      <a class="menu" href="#">Inicio</a>
+      <a class="menu" href="#">Sobre Mim</a>
+      <a class="menu" href="#">Projetos</a>
+      <a class="menu" href="#">Conhecimento</a>
+      <a class="menu" href="#">Contato</a>
+      <a class="menu tema" href="#">Tema</a>
     </nav>
   </header>
 
   <main>
-
-
+    <section class="banner">
+      <img src="imagens/logos/banner.png">
+    </section>
 
   </main>
 
