--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 <body>
   <header>
     <nav>
-      <a class="menu" href="#"><img src="imagens/logos/logo com texto.png"></a>
+      <a class="logo" href="#">
+        <img class="simbolo" src="imagens/logos/simbolo.png">
+        <img class="texto_logo" src="imagens/logos/texto.png">
+      </a>
+
       <a class="menu" href="#">Inicio</a>
       <a class="menu" href="#">Sobre Mim</a>
       <a class="menu" href="#">Projetos</a>
-      <a class="menu" href="#">Conhecimento</a>
       <a class="menu" href="#">Contato</a>
-      <a class="menu tema" href="#">Tema</a>
+      <a class="tema" href="#">Tema</a>
     </nav>
   </header>
 
